Fix "Music" z-index issue

--- a/wp-content/themes/wedontcare/src/scss/components/_layout.scss
+++ b/wp-content/themes/wedontcare/src/scss/components/_layout.scss
@@ -226,3 +226,8 @@ main {
         }
     }
 }
+
+.ms-stream {
+    position: relative;
+    z-index: 1;
+}
